projectiin ehnii huvisagchdiig uusgesen, haij olson

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     />
     <link type="text/css" rel="stylesheet" href="style.css" />
 
-    <title>Shoo hayh Togloom</title>
+    <title>Dice game</title>
   </head>
-
+ 
   <body>
     <div class="wrapper clearfix">
       <div class="player-0-panel active">
