--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <link type="text/css" rel="stylesheet" href="style.css" />
 
-    <title>Dice game</title>
+    <title>Nice game</title>
   </head>
  
   <body>
