--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <title>Nice game</title>
   </head>
- 
+
   <body>
     <div class="wrapper clearfix">
       <div class="player-0-panel active">
@@ -45,7 +45,8 @@
         <i class="ion-ios-download-outline"></i>Hold
       </button>
 
-      <img src="dice-5.png" alt="Dice" class="dice" />
+      <img src="dice-5.png" alt="Dice" class="dice1" />
+      <img src="dice-1.png" alt="Dice" class="dice2" />
     </div>
 
     <script src="app.js"></script>
