--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <link type="text/css" rel="stylesheet" href="style.css" />
 
-    <title>Dice game</title>
+    <title>Nice game</title>
   </head>
 
   <body>
@@ -45,8 +45,7 @@
         <i class="ion-ios-download-outline"></i>Hold
       </button>
 
-      <img src="dice-5.png" alt="Dice" class="dice1" />
-      <img src="dice-1.png" alt="Dice" class="dice2" />
+      <img src="dice-5.png" alt="Dice" class="dice" />
     </div>
 
     <script src="app.js"></script>
